# airflow-provider-firebolt

./: .fossa.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: pull-request.yml  python-release-org.yml  security-scan.yml
firebolt/: __init__.py
firebolt/example_dags/: example_firebolt.py
firebolt/hooks/: firebolt.py
firebolt/operators/: firebolt.py
firebolt_provider/: CHANGELOG.rst  __init__.py  provider.yaml
firebolt_provider/example_dags/: example_firebolt.py
firebolt_provider/hooks/: firebolt.py
firebolt_provider/operators/: firebolt.py
tests/hooks/: .coverage  test_firebolt.py
tests/operators/: .coverage  test_firebolt.py  test_start_stop.py
