[metadata]
name = airflow-provider-firebolt
version = 0.0.1
description = A Firebolt provider for Apache Airflow
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers = 
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Operating System :: OS Independent

author = Firebolt
author_email = support@firebolt.io
url = https://github.com/firebolt-db/airflow-provider-firebolt
project_urls = 
	Bug Tracker = https://github.com/firebolt-db/airflow-provider-firebolt/issues

[options]
packages = find:
python_requires = >=3.6
install_requires = 
	firebolt-sdk>=0.2.0

[options.entry_points]
apache_airflow_provider = 
	provider_info=firebolt_provider.__init__:get_provider_info

[options.extras_require]
dev =
    pytest
	apache-airflow
	pytest-cov